[package]
name = "make_order"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "0.18"
secp256k1 = "0.23"
ethers = { version = "1.0", features = ["legacy"] }
anyhow = "1.0"
